[tool.poetry]
name = "dynamixel"
version = "0.1.0"
description = ""
authors = ["na-trium-144 <100704180+na-trium-144@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
pyserial = "^3.5"
webcface = {path = "../webcface-python"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
